@@ -41,11 +41,11 @@ public class Test_073 extends BaseClass{
 			click(popularTableWare.get(i));
 			test.log(Status.INFO,"clicked on "+popularTableWare.get(i++).getText());
 			List<String> windows = WindowHandles();
-			driver.switchTo().window(windows.getLast());
+			driver.switchTo().window(windows.get(1));
 			test.log(Status.INFO,"switched to child window");
 			Assert.assertEquals(driver.findElement(By.xpath("//h1[@class=\"withsubtext\"]")).getText(),title);
 			driver.close();
-			driver.switchTo().window(windows.getFirst());
+			driver.switchTo().window(windows.get(0));
 			test.log(Status.INFO,"switched to parent window");
 		}
 		catch(Exception e) {
